# observing-scenarios-simulations

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  farah.py  pack-psds.py  plots-and-tables.ipynb  pyproject.toml  sort.py
condor/: localize.sub
historical/: GW170817_skymap.fits  GW170818_skymap.fits
pbs/: README.md  localize.pbs  make.pbs  stats.pbs
scripts/: bgp.py  fullpop4.py  get-public-alerts.py  gwtc4.py  pack-psds.py  population.py  split-events.py
