[project]
name = "observing-scenarios-simulations"
version = "0.0.0"
description = "LIGO/Virgo/KAGRA observing scenarios simulations"
authors = [{name = "Leo Singer", email = "leo.singer@ligo.org"}]
requires-python = ">=3.11, <4"
dependencies = [
    "astropy>=4.1",
    "astroplan",
    "scipy",
    "seaborn",
    "ligo.skymap>=1.0.6",
    "scikits.bootstrap>=1.1.0",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "gracedb-sdk",
    "lxml",
]
