[project]
name = "observing-scenarios-simulations"
version = "0.0.0"
description = "LIGO/Virgo/KAGRA observing scenarios simulations"
authors = [{name = "Leo Singer", email = "leo.singer@ligo.org"}]
requires-python = ">=3.11, <4"
dependencies = [
    "astroplan",
    "astropy>=4.1",
    "gracedb-sdk",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "ligo.skymap>=1.0.6",
    "lxml",
    "scikits.bootstrap>=1.1.0",
    "scipy",
    "seaborn",
]
