[project]
name = "observing-scenarios-simulations"
version = "0.0.0"
description = "LIGO/Virgo/KAGRA observing scenarios simulations"
authors = [{name = "Leo Singer", email = "leo.singer@ligo.org"}]
requires-python = ">=3.11, <4"
dependencies = [
    "astropy>=4.1",
    "gracedb-sdk",
    "gwpopulation",
    "ipykernel",
    "ipython",
    "ipywidgets",
    "ligo.skymap>=2.5.1",
    "lxml",
    "popsummary",
    "scikits.bootstrap>=1.1.0",
    "scipy",
    "seaborn",
]
